--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # Admin email for receiving notifications
-ADMIN_EMAIL="sale@gutgas.eu"
+ADMIN_EMAIL="borysenko.alexander@gmail.com"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
